add real frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,132 +1,13 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DFB Spesen Generator</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <!-- Header -->
-    <header class="header">
-        <div class="header-content">
-            <div class="logo">
-                <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <circle cx="12" cy="12" r="10"/>
-                    <path d="M12 2a10 10 0 0 0 0 20"/>
-                </svg>
-                <h1>DFB Spesen Generator</h1>
-            </div>
-            <form class="credentials-form" id="credentialsForm">
-                <div class="input-group">
-                    <input type="text" id="username" placeholder="Benutzername" required>
-                    <input type="password" id="password" placeholder="Passwort" required>
-                </div>
-                <button type="submit" class="btn btn-primary" id="generateBtn">
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
-                        <polyline points="7 10 12 15 17 10"/>
-                        <line x1="12" y1="15" x2="12" y2="3"/>
-                    </svg>
-                    <span>Spesen generieren</span>
-                </button>
-            </form>
-        </div>
-    </header>
-
-    <!-- Main Content -->
-    <main class="container">
-        <!-- Status Banner -->
-        <div id="statusBanner" class="status-banner" style="display: none;">
-            <div class="status-content">
-                <div class="status-icon" id="statusIcon"></div>
-                <p id="statusMessage"></p>
-            </div>
-            <button class="status-close" onclick="closeStatus()">&times;</button>
-        </div>
-
-        <!-- Welcome Screen -->
-        <div id="welcomeScreen" class="welcome-screen">
-            <div class="welcome-content">
-                <svg class="welcome-icon" width="80" height="80" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                    <path d="M9 11l3 3L22 4"/>
-                    <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"/>
-                </svg>
-                <h2>Willkommen beim DFB Spesen Generator</h2>
-                <p>Geben Sie Ihre DFBnet-Zugangsdaten ein und klicken Sie auf "Spesen generieren", um automatisch Ihre Spesenbelege zu erstellen.</p>
-                <div class="feature-list">
-                    <div class="feature-item">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <polyline points="20 6 9 17 4 12"/>
-                        </svg>
-                        <span>Automatische Datenerkennung</span>
-                    </div>
-                    <div class="feature-item">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <polyline points="20 6 9 17 4 12"/>
-                        </svg>
-                        <span>DOCX-Export pro Spiel</span>
-                    </div>
-                    <div class="feature-item">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <polyline points="20 6 9 17 4 12"/>
-                        </svg>
-                        <span>Bulk-Download als ZIP</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Loading State -->
-        <div id="loadingScreen" class="loading-screen" style="display: none;">
-            <div class="loading-content">
-                <div class="spinner"></div>
-                <h3>Generiere Spesenbelege...</h3>
-                <p>Dies kann 1-2 Minuten dauern. Bitte haben Sie Geduld.</p>
-                <div class="progress-bar">
-                    <div class="progress-fill" id="progressBar"></div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Matches Grid -->
-        <div id="matchesContainer" class="matches-container" style="display: none;">
-            <div class="matches-header">
-                <div>
-                    <h2>Ihre Spiele</h2>
-                    <p class="matches-count" id="matchesCount"></p>
-                </div>
-                <button class="btn btn-secondary" onclick="downloadAll()">
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
-                        <polyline points="7 10 12 15 17 10"/>
-                        <line x1="12" y1="15" x2="12" y2="3"/>
-                    </svg>
-                    <span>Alle als ZIP</span>
-                </button>
-            </div>
-            <div id="matchesGrid" class="matches-grid"></div>
-        </div>
-    </main>
-
-    <!-- Modal -->
-    <div id="matchModal" class="modal">
-        <div class="modal-overlay" onclick="closeModal()"></div>
-        <div class="modal-content">
-            <div class="modal-header">
-                <h2 id="modalTitle">Spieldetails</h2>
-                <button class="modal-close" onclick="closeModal()">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <line x1="18" y1="6" x2="6" y2="18"/>
-                        <line x1="6" y1="6" x2="18" y2="18"/>
-                    </svg>
-                </button>
-            </div>
-            <div class="modal-body" id="modalBody"></div>
-        </div>
-    </div>
-
-    <script src="config.js"></script>
-    <script src="app.js"></script>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>frontend</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
