--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" type="image/png" href="/appicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TFV-Spesengenerator</title>
+    <script>
+      // Theme sofort anwenden um Flackern zu verhindern
+      (function() {
+        const theme = localStorage.getItem('theme') || 'system';
+        const isDark = theme === 'dark' ||
+          (theme === 'system' && window.matchMedia('(prefers-color-scheme: dark)').matches);
+        if (isDark) {
+          document.documentElement.classList.add('dark');
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
